--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,57 +1,155 @@
+header{
+	height: 60px;
+	border: 1px (dashed);
+}
+a:link{
+	color: black;
+	text-decoration: none;
+
+}
+a:hover{
+	color: black;
+	text-decoration: underline;
+
+}
+#left-nav {
+	float: left;
+    margin: 21px 0;
+    margin-left: 40px;
+}
+a {
+    margin:0 8px;
+    position: relative;
+    top: 5px;
+    font-size: 14px;
+    font-family: arial;
+    color: #000000
+
+}
+
+#right-nav {
+	float:right;
+	margin:11.835px 0;
+}
+/*fix the position of the drawer and notifications*/
+.drawer{
+	position: relative;
+	top: 5px
+}
+.notif{
+	position: relative;
+	top: 5px;
+}
+sign-in{
+	width: 30px;
+	height:30px;
+}
+main{
+	clear: both;
+}
 body{
-	margin:0;
-	padding:0px;
-}
-a{
-	padding: 9px
-}
-li{
-	float: left; 
-	padding: 8px;
-	list-style: none;
-}
-#mg{
-	height: 24px; width: 24px;
-}
-#sign {
-height:35px;
-width:75px;
-}
+	display: block;
+    margin: 0px;
 
-#google{
-	padding-top: 109px;
-	height: 92px;
-	width:272px;
-	margin-left: 500px;
-
-}
-input{
-	height: 40px; width: 500px;
-	margin-left: 370px;
-	padding-left: 15px;
-	font-size: 18px;
-	border: 1px solid #e5e5e5;
-	border-radius: 3%;
-	box-shadow: 0px 3px 0px 0px #e5e5e5;
 }
 button{
-	margin-left:475px;
-	text-align:center;
-	height: 38px;
-	width: 140px;
-	background-color: #f6f6f6;
-	font-size: 15px;
-	color: #222222;
-	margin-top: 30px;
-	border: 1px solid #e4e4e4;
-	margin: 10px
+	background-color: #4285f4;
+	border: none;
+	color: white;
+	padding: 5px 12px;
+	text-align: center;
+	cursor: pointer;
 }
-.footer{
-	height: 65px; 
-	width: 1363px;
+.center{
+	display: block;
+ 	margin-left: auto;
+  	margin-right: auto;
+  	height: 92px;
+ 	width: 272px;
+ 	padding-top: 70px;
+
+}
+Google main image {
+	display: block;
+ 	margin-left: auto;
+ 	margin-right: auto;
+}
+#form{
+	text-align: center
+}
+#form-search{
+	line-height: 10px;
+	padding: 5px 60px;
+	display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+}
+.form #form-search{
+	padding:0 8px;
+	margin-left: 10px;
+
+}
+#buttons{
+	text-align: center;
+	padding-top: 1px;
+	margin-bottom: 0px;
+}	
+#google-search{
 	background-color: #f2f2f2;
-	margin-top: 50px;
-	position: absolute;
-	list-style: none;
-	margin-left: 0px;
+    border: 1px solid #f2f2f2;
+    border-radius: 2px;
+    color: #757575;
+    cursor: pointer;
+    font-family:sans-serif;
+    font-size: 13px;
+    font-weight: bold;
+    margin: 11px 4px;
+    min-width: 54px;
+    padding: 0 16px;
+    text-align: center;
+}
+#lucky{
+	background-color: #f2f2f2;
+    border: 1px solid #f2f2f2;
+    border-radius: 2px;
+    color: #757575;
+    cursor: pointer;
+    font-family:sans-serif;
+    font-size: 13px;
+    font-weight: bold;
+    margin: 11px 4px;
+    min-width: 54px;
+    padding: 0 16px;
+    text-align: center;
+}
+
+footer {
+  background: #f2f2f2;
+  border-top: solid 2px #e4e4e4;
+  position: fixed;
+  bottom: 0;
+  padding-bottom: 0;
+  width: 100%;
+  
+}
+footer ul li{
+	display: inline;
+	color:#666666;
+	padding:13px;
+}
+.footer ul{
+	float:left
+	padding:0px;
+}
+
+.footer-left{
+	float: left;
+	text-decoration:none;
+
+}
+.footer-right{
+	float:right;
+
 }
