--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,10 +1,12 @@
 header{
-	height: 60px;
-	border: 1px (dashed);
+    display: flex;
+    align-items: baseline;
+    justify-content: space-between;
 }
 a:link{
 	color: black;
 	text-decoration: none;
+    margin-top: -10px;
 
 }
 a:hover{
@@ -36,6 +38,66 @@ a {
 	position: relative;
 	top: 5px
 }
+/*grid test*/
+
+#grid-container > div {
+  text-align: center;
+  font-size: 14px;
+}
+#grid-container {
+    /* width: 261px; */
+    /* height: 337px; */
+    position: relative;
+    right: 20px;
+    top: 15px;
+    background-color: #fff;
+    border: 1px solid silver;
+    vertical-align: top;
+    padding: 20px;
+    z-index: 1;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: 45px 45px 45px;
+    justify-content: center;
+    grid-column-gap: 20px;
+    grid-row-gap: 30px;
+}
+#container{
+    display: none;
+    position: absolute;
+}
+
+#grid-container div{
+    
+    height: 65px;
+    width: 60px;
+    background-color: inherit;
+    padding: 5px;
+    
+}
+
+#grid-container div:hover{
+    box-shadow:inset 0px 0px 0px 1px silver;
+}
+
+
+.flxapps{
+  height: auto;
+  width: auto;
+  margin-bottom: 10px;
+
+}
+
+
+
+
+
+
+
+
+
+
+/*grid test*/
 .notif{
 	position: relative;
 	top: 5px;
@@ -53,8 +115,7 @@ sign-in{
 #notications{
 	width:30px;
 	height: 30px;
-	position: relative;
-    top: 5px;
+	
 
 }
 main{
@@ -80,7 +141,7 @@ button{
   	margin-right: auto;
   	height: 92px;
  	width: 272px;
- 	padding-top: 70px;
+ 	padding-top: 150px;
 
 }
 Google main image {
@@ -103,7 +164,8 @@ Google main image {
 #mic{
 	position: absolute;
     right: 15px;
-    bottom: 9px;
+    bottom: 5px;
+    height: 30px;
 
 }
 
